[build-system]
requires = ["hatchling>=1.18.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyutils"
version = "0.0.0"
description = ""
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    { name = "Easun Arunachalam", email = "arunachalam@g.harvard.edu" },
]
keywords = [
    "example",
    "setuptools",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/easunarunachalam/pyutils"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "pyutils",
]
exclude = ["tests*"]